# lab8

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists2.txt  Doxyfile  README.md  main.c
include/: file.h  hero.h  list.h  server_info.h  util.h
src/: file.c  hero.c  list.c  server_info.c  util.c
